Fix token select on mobile

--- a/src/pages/swap/SwapInfo.scss
+++ b/src/pages/swap/SwapInfo.scss
@@ -2,6 +2,7 @@
 
 .swap-info-wrapper {
   position: absolute;
+  z-index: 1;
   right: 0;
   top: 24px;
   display: flex;
